apps/keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: web
      port: 8443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    spec:
      containers:
        - name: keycloak
          image: "ghcr.io/mhutter/mhnet-keycloak:v26.0.7-3"
          volumeMounts:
            - name: tls
              readOnly: true
              mountPath: /certs
            - name: data
              mountPath: /opt/keycloak/data
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /health/ready
              port: 9000
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /health/live
              port: 9000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        runAsUser: 142041
        runAsGroup: 142041
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tls
          secret:
            secretName: keycloak-ingress-tls
        - name: data
          emptyDir: {}
