apps/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
        - id.mhnet.app
      secretName: keycloak-ingress-tls
  rules:
    - host: id.mhnet.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: https
